--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link rel="stylesheet" href="WOW-master/css/libs/animate.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -57,7 +59,7 @@
     <section class="text-center container-fluid container4" id="home" >
       <article id="carouselExampleSlidesOnly" class="carousel  slide" data-ride="carousel" data-interval="3000">
           <main class="carousel-inner ">
-            <div class="carousel-item active">
+            <div class="carousel-item active carousel-height">
               <div class="rowe">
                   <div class="leftt pt-3">
                       <h2 class="font text-primary font-weight-bolder pt-4">Open your Business to a World of Endless Audience</h1>
@@ -68,7 +70,7 @@
                      </div>
               </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item carousel-height">
               <div class="bag pt-3">
                 <h4 class="wordCarousel font-weight-bolder">    
                   <h5 class="text-primary">Get more: </h5>  
@@ -87,7 +89,7 @@
                     <img  class="img-responsive" src="croonials-banner-image.webp" alt="Audience">
             </div>
         </div>
-            <div class="carousel-item">
+            <div class="carousel-item carousel-height">
               <div class="rowe">
                   <div class="leftt pt-3">
                           <h2 class="font text-primary font-weight-bolder">
@@ -112,10 +114,6 @@
    </div>
    <!-- <div>
     <i class="fas fa-link"></i>
-<a href="https://www.freepik.com/free-photos-vectors/people">People vector created by stories - www.freepik.com</a>
-<a href="https://www.freepik.com/free-photos-vectors/people">People vector created by pch.vector - www.freepik.com</a>
-<a href="https://www.freepik.com/free-photos-vectors/infographic">Infographic vector created by pch.vector - www.freepik.com</a>
-<a href="https://www.freepik.com/free-photos-vectors/business">Business vector created by pikisuperstar - www.freepik.com</a>
     <i class="fas fa-video"></i>
     <i class="fas fa-users"></i>
     <i class="fas fa-certificate"></i>
@@ -124,7 +122,7 @@
    </div> -->
   <div class="container" id="here">
         <div class="row">
-                <div class="col-sm-6 align-self-center" >
+                <div class="col-sm-6 align-self-center wow fadeInLeftBig animate__delay-2s" >
                       <h2 class="text-center text-primary py-3">Here To Serve You</h2>
                       <p class="story">
                        <strong> Ace media</strong> is a social media and digital marketing agency that 
@@ -132,12 +130,12 @@
                          organically and driving traffic to your brand/business to improve sales. 
                       </p>
                 </div>
-                <div class="col-sm-6 align-self-center">
+                <div class="col-sm-6 align-self-center wow fadeInRightBig animate__delay-2s">
                         <img src="2796424.png" alt="working">
                 </div>
             </div>
-            <div class="row">
-                    <div class="col-sm-6 align-self-start">
+            <div class="row wow fadeInDownBig animate__delay-2s">
+                    <div class="col-sm-6 align-self-start ">
                             <img src="2796375-1.png" alt="growing">
                     </div>
                     <div class="col-sm-6 align-self-center" id="here">
@@ -158,6 +156,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="WOW-master/dist/wow.min.js"></script>
     <script src="app.js"></script>
+  
 </body>
 </html> 
