--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>   
+    <link rel="stylesheet" href="WOW-master/css/libs/animate.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -55,7 +57,7 @@
                             <div class="container6">
                                 <div class="container7">
                                  <div class="container" id="contact">
-                                     <h2 class="display-4 py-4 text-primary">
+                                     <h2 class="display-4 py-4 text-primary wow slideInDown">
                                              contact us
                                          </h2>            
                                      <h5 class="story">Get in touch & <b class="font-weight-bold">Grow your business</b></h5>
@@ -112,6 +114,7 @@
                     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
                     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+                    <script src="WOW-master/dist/wow.min.js"></script>
                     <script src="app.js"></script>
     </header>
 </body>
