--- a/review.html
+++ b/review.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link rel="stylesheet" href="WOW-master/css/libs/animate.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -56,7 +58,7 @@
         <div class="container4  fixed-attachment" id="review">
                 <div class="container-fluid fixed-attachment py-5" style="background-image: url('backgroundimage.jpeg');height: 60vh;">
                         <div class="bg-infor py-5" id="services" >
-                             <h2 class="display-4 py-5 text-primary">
+                             <h2 class="display-4 py-5 text-primary wow slideInDown">
                                    reviews
                                   </h2>
                         </div>
@@ -122,64 +124,64 @@
                                               </div>
                             </div>    
                     </div>
+                    <div class="container-fluid" id="client">
+                      <div class="container5 container">
+                          <h2 class="text-center text-primary py-3">Our clients</h2>
+                          <h3 class="sub-title text-center">
+                              The people who have trusted us so far
+                          </h3><br>
+                          <div>
+                          <div class="slides remove">
+                          <div class="number">1/8</div>
+                              <img class="gallery" src="bolt.png" alt="slide-show-image">
+                          </div>
+                          </div>
+                          <div class="slides remove">
+                           <div class="number">2/8</div>
+                          <img class="gallery" src="nairabet.png" alt="slide-show-image">
+                          </div>
+                          <div class="slides remove">
+                          <div class="number">3/8</div>
+                          <img class="gallery" src="bull_client_7.png" alt="slide-show-image">
+                          </div>
+                          <div class="slides remove">
+                          <div class="number">4/8</div>
+                          <img class="gallery" src="BLACKBET_logo.png" alt="slide-show-image">
+                          </div>
+                          <div class="slides remove">
+                          <div class="number">5/8</div>
+                          <img class="gallery" src="aiico.jpg" alt="slide-show-image">
+                          </div>
+                          <div class="slides remove">
+                          <div class="number">6/8</div>
+                          <img class="gallery" src="socialigaa.png" alt="slide-show-image">
+                          </div>
+                          <div class="slides remove">
+                          <div class="number">7/8</div>
+                          <img class="gallery" src="airtel.jpg" alt="slide-show-image">
+                          </div>
+                          <div class="slides remove">
+                          <div class="number">8/8</div>
+                          <img class="gallery" src="DSTV-logo-214D0468CA-seeklogo.com_.png" alt="">
+                          </div>
+                          <a class="arrow-left" onclick="plusSlides(-1)">&#10094</a>
+                          <a class="arrow-right" onclick="plusSlides(1)">&#10095</a>
+                      </div>
+                      <br>
+                      <div style="text-align: center;">
+                      <span class="do" onclick="currentSlide(1)"></span>
+                      <span class="do" onclick="currentSlide(2)"></span>
+                      <span class="do" onclick="currentSlide(3)"></span>
+                      <span class="do" onclick="currentSlide(4)"></span>
+                      <span class="do" onclick="currentSlide(5)"></span>
+                      <span class="do" onclick="currentSlide(6)"></span>
+                      <span class="do" onclick="currentSlide(7)"></span>
+                      <span class="do" onclick="currentSlide(8)"></span>
+                      </div>
+                      </div>
+                  </div>
                     </div>
                 </div>
-        </div>
-        <div class="container-fluid" id="client">
-            <div class="container5 container">
-                <h2 class="text-center text-primary py-3">Our clients</h2>
-                <h3 class="sub-title text-center">
-                    The people who have trusted us so far
-                </h3><br>
-                <div>
-                <div class="slides remove">
-                <div class="number">1/8</div>
-                    <img class="gallery" src="bolt.png" alt="slide-show-image">
-                </div>
-                </div>
-                <div class="slides remove">
-                 <div class="number">2/8</div>
-                <img class="gallery" src="nairabet.png" alt="slide-show-image">
-                </div>
-                <div class="slides remove">
-                <div class="number">3/8</div>
-                <img class="gallery" src="bull_client_7.png" alt="slide-show-image">
-                </div>
-                <div class="slides remove">
-                <div class="number">4/8</div>
-                <img class="gallery" src="BLACKBET_logo.png" alt="slide-show-image">
-                </div>
-                <div class="slides remove">
-                <div class="number">5/8</div>
-                <img class="gallery" src="aiico.jpg" alt="slide-show-image">
-                </div>
-                <div class="slides remove">
-                <div class="number">6/8</div>
-                <img class="gallery" src="socialigaa.png" alt="slide-show-image">
-                </div>
-                <div class="slides remove">
-                <div class="number">7/8</div>
-                <img class="gallery" src="airtel.jpg" alt="slide-show-image">
-                </div>
-                <div class="slides remove">
-                <div class="number">8/8</div>
-                <img class="gallery" src="DSTV-logo-214D0468CA-seeklogo.com_.png" alt="">
-                </div>
-                <a class="arrow-left" onclick="plusSlides(-1)">&#10094</a>
-                <a class="arrow-right" onclick="plusSlides(1)">&#10095</a>
-            </div>
-            <br>
-            <div style="text-align: center;">
-            <span class="do" onclick="currentSlide(1)"></span>
-            <span class="do" onclick="currentSlide(2)"></span>
-            <span class="do" onclick="currentSlide(3)"></span>
-            <span class="do" onclick="currentSlide(4)"></span>
-            <span class="do" onclick="currentSlide(5)"></span>
-            <span class="do" onclick="currentSlide(6)"></span>
-            <span class="do" onclick="currentSlide(7)"></span>
-            <span class="do" onclick="currentSlide(8)"></span>
-            </div>
-            </div>
         </div>
         <button onclick="topFunction()" id="myBtn" title="Back to top"><i class="fas fa-sort-up"></i></button>
         <footer class="container-fluid blockquote-footer text-center">
@@ -189,6 +191,7 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+        <script src="WOW-master/dist/wow.min.js"></script>
         <script src="app.js"></script> 
 </body>
 </html>
