--- a/services.html
+++ b/services.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link rel="stylesheet" href="WOW-master/css/libs/animate.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    
     <link rel="stylesheet" href="style.css">
@@ -56,7 +58,7 @@
         <div>
                 <div class="container-fluid fixed-attachment py-5" style="background-image: url('backgroundimage.jpeg');height: 60vh;">
                         <div class="bg-infor py-5" id="services" >
-                             <h2 class="display-4 py-5 text-primary">
+                             <h2 class="display-4 py-5 text-primary wow slideInDown">
                                     services
                                   </h2>
                         </div>
@@ -139,6 +141,7 @@
                     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
                     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+                    <script src="WOW-master/dist/wow.min.js"></script>
                     <script src="app.js"></script>
 </body>
 </html>
