--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
                <div class="container7">
                 <div class="container">
                   <div class="row py-3">
-                    <article class="col-sm-6 align-self-center">
+                    <article class="col-sm-6 align-self-center wow slideInLeft">
                       <h4 class="text-center font-weight-bolder pt-3">Our story</h4>
                         <p class="story">
                           Over the years we have helped startups find a place to call
@@ -80,17 +80,17 @@
                           <br>
                          </p>
                     </article>
-                    <aside class="col-sm-6 align-self-center">
+                    <aside class="col-sm-6 align-self-center wow bounceInUp">
                       <img src="buildteam.45d2ac6a.svg" alt="our team">
                     </aside>
                   </div>
                 </div>
                     <div class="container-fluid">
                       <div class="row py-3" style="background-color: RGB(136, 193, 247);">
-                        <aside class="col-sm-6 align-self-center">
+                        <aside class="col-sm-6 align-self-center slideInLeft wow ">
                             <img src="outsourcingicon.5d5b5987.svg" alt="our team">
                           </aside>
-                        <article class="col-sm-6 align-self-center">
+                        <article class="col-sm-6 align-self-center wow slideInRight">
                           <h4 class="font-weight-bolder text-center pt-3">How we work</h4>
                             <p class="story">
                               We provide internet marketing for clients and a platform to be heard by a 
