--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                                      <h5 class="story">Get in touch & <b class="font-weight-bold">Grow your business</b></h5>
                                      <h6 class="story">Have a question or inquiry? <b class="font-weight-bold">Simply fill out the form below</b></h6>
                                      <div class="row pt-4">
-                                     <section class="col-sm-6">
+                                     <section class="col-sm-6 wow slideInLeft">
                                                  <form action="">
                                                      <label for="name" class="font-weight-bold">Name <span>*</span></label><br>
                                                     <div class="row pb-2">
@@ -87,7 +87,7 @@
                                                      <button type="submit" class="mt-4 mb-4 bg-dark">SUBMIT</button>
                                                  </form>
                                      </section>
-                                     <aside class="col-sm-6">
+                                     <aside class="col-sm-6 wow slideInRight">
                                          <h6 class="story">Talk to us</h6>
                                          <p class="story">Call or e-mail us about your online marketing needs.</p>
                                          <div class="story">
