--- a/services.html
+++ b/services.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
-    <link rel="stylesheet" href="WOW-master/css/libs/animate.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <link rel="stylesheet" href="WOW-master/css/libs/animate.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -69,7 +69,7 @@
                           <div class="container" >
                                 <h2 class="text-center text-primary py-3">What we Offer</h2>
                           <div class="row">
-                              <aside class="col-sm-6 align-self-center">
+                              <aside class="col-sm-6 align-self-center wow slideInLeft">
                                   <div class="brand-image"><img src="72.png" alt=""></div>
                                   <h3 class="font-weight-bolder">
                                       Social Media Marketing Services
@@ -80,7 +80,7 @@
                                      to be very effective and very cost friendly. 
                                   </p>
                               </aside>
-                              <section class="col-sm-6 align-self-center">
+                              <section class="col-sm-6 align-self-center wow slideInRight">
                                 <div class="brand-image"><img src="76.png" alt=""></div>
                                   <h3 class="font-weight-bolder">
                                       Digital Marketing Services
@@ -94,11 +94,11 @@
                               <div class="container br" id="approach">
                                     <h2 class="text-center text-primary py-3">Our approach</h2>
                                     <h3 class="under-title text-center font-weight-bolder pb-3">Three things that make us unique</h3>
-                                    <div class="row">
+                                    <div class="row wow slideInRight">
                                         <aside class="col-sm-4 align-self-center">
                                             <div class="brand-image"><img src="77.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
-                                                CUSTOMER -BRAND INTERACTION
+                                                Customer -Brand Interaction
                                             </h3>
                                             <p class="story">
                                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
@@ -134,14 +134,14 @@
                     </div>
                 </div>
                      <button onclick="topFunction()" id="myBtn" title="Back to top"><i class="fas fa-sort-up"></i></button>
-                    <footer class="container-fluid blockquote-footer text-center">
-                    © 2020 All rights reserved. Powered By ACE MEDIA
-                    </footer>
-                    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-                    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-                    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-                    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-                    <script src="WOW-master/dist/wow.min.js"></script>
-                    <script src="app.js"></script>
+                     <footer class="container-fluid blockquote-footer text-center">
+                        © 2020 All rights reserved. Powered By ACE MEDIA
+                        </footer>
+                        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+                        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+                        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+                        <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+                        <script src="WOW-master/dist/wow.min.js"></script>
+                        <script src="app.js"></script>
 </body>
 </html>
